--- a/lib/css/select2-krajee.css
+++ b/lib/css/select2-krajee.css
@@ -29,10 +29,14 @@
 .select2-container--krajee .select2-search--dropdown .select2-search__field {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    background: #fff url('select2.png') no-repeat 100% -22px;
+    background: #fff url('search.png') right 10px top 7px no-repeat;
     border: 1px solid #ccc;
     border-radius: 4px;
     color: #555555;
+}
+
+.select2-container--krajee .select2-dropdown[dir="rtl"] .select2-search__field {
+    background: #fff url('search.png') left 10px top 7px no-repeat;
 }
 
 .select2-container--krajee .select2-search__field {
@@ -259,10 +263,26 @@
     padding: 0;
 }
 
-.select2-container--krajee .select2-results__option.loading-results {
+.select2-container--krajee .select2-results__option.loading-results,
+.select2-container--krajee .load-more {
     font-style: italic;
-    color: #555;
-    background: #fff;
+    color: #a94442;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: #fff url('loading.gif') right 10px center no-repeat;
+}
+
+.select2-container--krajee .load-more {
+    margin: 5px 0 5px 5px;
+}
+
+.select2-container--krajee .select2-dropdown[dir="rtl"] .select2-results__option.loading-results,
+.select2-container--krajee .select2-dropdown[dir="rtl"] .load-more {
+    background: #fff url('loading.gif') left 10px center no-repeat;
+}
+
+.select2-container--krajee .select2-dropdown[dir="rtl"] .load-more {
+    margin: 5px 5px 5px 0;
 }
 
 .select2-container--krajee .select2-results__option[aria-selected] {
