--- a/assets/css/select2-krajee.css
+++ b/assets/css/select2-krajee.css
@@ -1,6 +1,6 @@
 /*!
  * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2015
- * @version 2.0.2
+ * @version 2.0.4
  *
  * Krajee Theme for Select2 (matches Bootstrap 3 styles)
  *
@@ -60,109 +60,6 @@
 }
 
 /**
- * Selection Clear 
- */
-.select2-container--krajee .select2-selection__clear {
-    color: #000;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
-    margin-right: 30px;
-    position: absolute;
-    right: 0px;
-    opacity: 0.4;
-    filter: alpha(opacity=40);
-}
-
-.select2-container--krajee[dir="rtl"] .select2-selection__clear {
-    left: 0px;
-    right: auto;
-    margin-right: auto;
-    margin-left: 30px;
-}
-
-.select2-container--krajee .select2-selection__clear:hover {
-    opacity: 0.6;
-    filter: alpha(opacity=60);
-}
-
-.input-group-sm .select2-container--krajee .select2-selection__clear {
-    font-size: 15px;
-    line-height: 1.3;
-    margin-right: 26px;
-}
-
-.input-group-lg .select2-container--krajee .select2-selection__clear {
-    font-size: 21px;
-    margin-right: 34px;
-}
-
-.select2-container--krajee[dir="rtl"] .select2-selection__clear {
-    margin-right: 0;
-    margin-left: 30px;
-}
-
-.input-group-sm .select2-container--krajee[dir="rtl"] .select2-selection__clear {
-    margin-left: 26px;
-}
-
-.input-group-lg .select2-container--krajee[dir="rtl"] .select2-selection__clear {
-    margin-left: 34px;
-}
-
-.select2-container--krajee .select2-selection--multiple .select2-selection__clear {
-    margin-right: 10px;
-    margin-top: 6px;
-}
-
-.select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__clear {
-    margin-right: 0;
-    margin-left: 10px;
-    margin-top: 6px;
-}
-
-.input-group-sm .select2-container--krajee .select2-selection--multiple .select2-selection__clear {
-    margin-top: 5px;
-}
-
-.input-group-lg .select2-container--krajee .select2-selection--multiple .select2-selection__clear {
-    margin-top: 8px;
-}
-
-/**
- * Multi Selection Remove
- */
-.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
-    color: #000;
-    cursor: pointer;
-    display: inline-block;
-    text-shadow: 0 1px 0 #fff;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 1;
-    margin-right: 3px;
-    opacity: 0.4;
-    filter: alpha(opacity=40);
-}
-
-.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove:hover {
-    opacity: 0.6;
-    filter: alpha(opacity=60);
-}
-
-.input-group-sm .select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
-    margin-top: 1px;
-    font-size: 12px;
-    line-height: 1;
-}
-
-.input-group-lg .select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
-    margin-top: 1px;
-    font-size: 16px;
-    line-height: 1.2;
-}
-
-/**
  * Selection Arrow
  */
 .select2-container--krajee .select2-selection--single .select2-selection__arrow {
@@ -198,9 +95,7 @@
 .select2-container--krajee[dir="rtl"] .select2-selection--single .select2-selection__arrow {
     border: none;
     border-right: 1px solid #aaa;
-    border-radius: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-radius: 4px 0 0 4px;
     left: 1px;
     right: auto;
 }
@@ -210,7 +105,7 @@
     border: none;
 }
 
-.input-sm.select2-container--krajee  .select2-selection--single .select2-selection__arrow,
+.input-sm.select2-container--krajee .select2-selection--single .select2-selection__arrow,
 .input-group-sm .select2-container--krajee .select2-selection--single .select2-selection__arrow {
     height: 29px;
     width: 18px;
@@ -476,10 +371,6 @@
     text-align: right;
 }
 
-.select2-container--krajee[dir="rtl"] .select2-selection--single .select2-selection__clear {
-    float: left;
-}
-
 .select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
 .select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__placeholder {
     float: right;
@@ -499,7 +390,7 @@
  * Bootstrap validation states
  */
 .has-warning.select2-container--krajee .select2-dropdown,
-.has-warning .select2-container--krajee .select2-selection  {
+.has-warning .select2-container--krajee .select2-selection {
     border-color: #8a6d3b;
 }
 
@@ -536,14 +427,14 @@
 
 /**
  * Bootstrap Input Groups & Input Sizes
- */ 
+ */
 
 .input-sm.select2-container--krajee, .input-lg.select2-container--krajee {
-  border-radius: 0;
-  font-size: 12px;
-  height: auto;
-  line-height: 1;
-  padding: 0;
+    border-radius: 0;
+    font-size: 12px;
+    height: auto;
+    line-height: 1;
+    padding: 0;
 }
 
 .input-group .select2-container--krajee {
@@ -652,4 +543,119 @@
 .form-control.select2-hidden-accessible {
     position: absolute !important;
     width: 1px !important;
+}
+
+/**
+ * Selection Clear 
+ */
+.select2-container--krajee .select2-selection__clear {
+    float: right;
+    color: #000;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.3;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+}
+
+.select2-container--krajee .select2-selection__clear:hover {
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+}
+
+.select2-container--krajee .select2-selection--multiple .select2-selection__clear {
+    margin: 5px 10px 0 10px;
+}
+
+.input-sm.select2-container--krajee .select2-selection__clear,
+.input-group-sm .select2-container--krajee .select2-selection__clear {
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+.input-lg.select2-container--krajee .select2-selection__clear,
+.input-group-lg .select2-container--krajee .select2-selection__clear {
+    margin-right: 20px;
+    font-size: 20px;
+}
+
+.input-sm.select2-container--krajee .select2-selection--multiple .select2-selection__clear,
+.input-group-sm .select2-container--krajee .select2-selection--multiple .select2-selection__clear {
+    margin-right: 10px;
+}
+
+.input-lg.select2-container--krajee .select2-selection--multiple .select2-selection__clear,
+.input-group-lg .select2-container--krajee .select2-selection--multiple .select2-selection__clear {
+    font-size: 20px;
+    margin: 8px 12px 0 0;
+
+}
+
+.select2-container--krajee[dir="rtl"] .select2-selection__clear {
+    float: left;
+    left: 0;
+    right: auto;
+    margin-left: 3px;
+}
+
+.input-sm.select2-container--krajee[dir="rtl"] .select2-selection__clear,
+.input-group-sm .select2-container--krajee[dir="rtl"] .select2-selection__clear {
+    margin-left: 15px;
+}
+
+.input-lg.select2-container--krajee[dir="rtl"] .select2-selection__clear,
+.input-group-lg .select2-container--krajee[dir="rtl"] .select2-selection__clear {
+    margin-left: 20px;
+}
+
+.select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__clear {
+    float: left;
+    left: 0;
+    right: auto;
+    margin-left: 8px;
+}
+
+/**
+ * Multi Selection Remove
+ */
+.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
+    float: right;
+    color: #000;
+    cursor: pointer;
+    display: inline-block;
+    text-shadow: 0 1px 0 #fff;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 1;
+    margin: 2px 0 0 3px;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+}
+
+.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove:hover {
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+}
+
+.input-sm.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove,
+.input-group-sm .select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
+    margin-top: 3px;
+    font-size: 12px;
+    line-height: 1;
+}
+
+.input-lg.select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove,
+.input-group-lg .select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
+    margin-top: 3px;
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+.select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__choice__remove {
+    float: left;
+    margin: 3px 3px 0 0;
 }
