Consistent placeholder color style
Consistent placeholder color style for single select and multiple select

--- a/src/assets/css/select2-krajee.css
+++ b/src/assets/css/select2-krajee.css
@@ -364,6 +364,7 @@
     line-height: 1.428571429;
     margin-top: 0;
     min-width: 5em;
+    color: #999;
 }
 
 .select2-container--krajee[dir="rtl"] .select2-selection--single {
