Updates to release v2.1.8 fixes #326

--- a/src/assets/css/select2-krajee.css
+++ b/src/assets/css/select2-krajee.css
@@ -1,6 +1,6 @@
 /*!
- * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2019
- * @version 2.1.7
+ * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2020
+ * @version 2.1.8
  *
  * Krajee Bootstrap 3.x Theme for Select2
  *
@@ -559,38 +559,37 @@
 .select2-container--krajee .select2-selection__clear {
     color: #000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    top: 0.4rem;
+    top: 6px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 16px;
     opacity: 0.4;
-    filter: alpha(opacity=40);
-    position: absolute;
-}
-
-.select2-container--krajee .select2-selection--single .select2-selection__clear {
     position: absolute;
 }
 
 .select2-container--krajee .select2-selection__clear:hover {
     opacity: 0.6;
-    filter: alpha(opacity=60);
+}
+
+.select2-container--krajee .select2-selection--single .select2-selection__clear,
+.select2-container--krajee .select2-selection--multiple .select2-selection__clear {
+    font-size: 16px;
 }
 
 .select2-container--krajee .select2-selection--single .select2-selection__clear {
-    right: 3rem;
+    right: 20px;
 }
 
 .select2-container--krajee[dir="rtl"] .select2-selection--single .select2-selection__clear {
-    left: 3rem;
+    left: 20px;
     right: auto;
 }
 
 .select2-container--krajee .select2-selection--multiple .select2-selection__clear {
-    right: 1rem;
+    right: 10px;
 }
 
 .select2-container--krajee[dir="rtl"] .select2-selection--multiple .select2-selection__clear {
-    left: 1rem;
+    left: 10px;
     right: auto;
 }
 
@@ -614,6 +613,10 @@
  * Multi Selection Remove
  */
 .select2-container--krajee .select2-selection--multiple .select2-selection__choice__remove {
+    border: none;
+    background: none;
+    box-shadow: none;
+    outline: none;
     float: right;
     color: #000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
