--- a/src/assets/css/select2-krajee-bs4.css
+++ b/src/assets/css/select2-krajee-bs4.css
@@ -1,6 +1,6 @@
 /*!
- * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2019
- * @version 2.1.7
+ * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2020
+ * @version 2.1.8
  *
  * Krajee Bootstrap 4.x Theme for Select2
  *
@@ -40,7 +40,7 @@
     background: #fff url('search.png') right 0.625rem top 0.625rem no-repeat;
     border: 1px solid #ccc;
     border-radius: 0.25rem;
-    color: #555555;
+    color: #555;
 }
 
 .select2-container--krajee-bs4 .select2-dropdown .select2-toggle-all {
@@ -312,7 +312,7 @@
 }
 
 .select2-container--krajee-bs4 .select2-selection--single .select2-selection__rendered {
-    color: #555555;
+    color: #555;
     padding: 0;
 }
 
@@ -351,7 +351,7 @@
     cursor: default;
     float: left;
     margin: 0.375rem 0 0 0.375rem;
-    padding: 0.05rem 0.375rem 0.15rem;
+    padding: 0.05rem 0.05rem 0.25rem 0.25rem;
     font-size: 1rem;
     line-height: 1.3;
 }
@@ -548,12 +548,13 @@
     opacity: 0.5;
 }
 
-.select2-container--krajee-bs4 .select2-selection--single .select2-selection__clear {
-    position: absolute;
-}
-
 .select2-container--krajee-bs4 .select2-selection__clear:hover {
     opacity: 0.7;
+}
+
+.select2-container--krajee-bs4 .select2-selection--single .select2-selection__clear,
+.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__clear {
+    font-size: 1.2rem;
 }
 
 .select2-container--krajee-bs4 .select2-selection--single .select2-selection__clear {
@@ -567,7 +568,7 @@
 
 .input-sm.select2-container--krajee-bs4 .select2-selection__clear,
 .input-group-sm .select2-container--krajee-bs4 .select2-selection__clear {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .input-lg.select2-container--krajee-bs4 .select2-selection__clear,
@@ -598,10 +599,14 @@
  * Multi Selection Remove
  */
 .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
+    border: none;
+    background: none;
+    box-shadow: none;
+    outline: none;
     float: right;
     font-size: 1.2rem;
     font-weight: 700;
-    line-height: 1;
+    line-height: 1rem;
     color: #000;
     text-shadow: 0 1px 0 #fff;
     opacity: 0.5;
