--- a/src/assets/css/select2-material.css
+++ b/src/assets/css/select2-material.css
@@ -1,6 +1,6 @@
 /*!
- * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2019
- * @version 2.1.7
+ * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2020
+ * @version 2.1.8
  *
  * Material Theme for Select2
  *
@@ -9,10 +9,21 @@
  * For more Yii related demos visit http://demos.krajee.com
  */
 .select2-container--material .select2-selection__clear {
+    position: absolute;
+    right: 1px;
+    top: -1px;
     color: #999;
     cursor: pointer;
-    float: right;
     font-weight: 700;
+}
+
+.select2-container--material {
+    border-bottom: 1px solid #ccc;
+}
+
+.select2-container--material.select2-container--focus {
+    border-bottom: 1px solid #4285f4;
+    box-shadow: 0 1px 0 0 #4585f4;
 }
 
 .select2-container--material .select2-selection__clear:hover {
@@ -26,22 +37,16 @@
 }
 
 .select2-container--material .select2-selection {
-	display: block;
+    display: block;
     width: 100%;
     color: #55595c;
     font-size: 1rem;
-	margin: .2rem 0 1rem;
-	border: none;
-    border-bottom: 1px solid #ccc;
+    border: none;
     border-radius: 0;
     outline: none;
     box-shadow: none;
     transition: all .3s;
     cursor: context-menu;
-}
-
-.select2-container--material .select2-selection--single {
-    padding-bottom: 31px;
 }
 
 .select2-container--material .select2-selection .select2-selection__rendered {
@@ -56,6 +61,7 @@
 
 .select2-container--material .select2-selection--single .select2-selection__clear {
     margin-left: 4px;
+    margin-right: 15px;
 }
 
 .select2-container--material .select2-selection--single .select2-selection__arrow {
@@ -67,7 +73,7 @@
 }
 
 .select2-container--material .select2-selection--single .select2-selection__arrow b {
-	position: absolute;
+    position: absolute;
     border-color: #999 transparent transparent transparent;
     border-style: solid;
     border-width: 4px 4px 0 4px;
@@ -77,6 +83,10 @@
     margin-top: -2px;
     top: 50%;
     width: 0;
+}
+
+.select2-container--material .select2-selection--multiple {
+    margin-top: 2px;
 }
 
 .select2-container--material .select2-selection--multiple .select2-selection__rendered {
@@ -93,7 +103,7 @@
     float: left;
     position: relative;
     display: inline-block;
-    margin: 2px 2px 0 0;
+    margin: 0 2px 4px 0;
     padding: 1px 18px 2px 8px;
     border: 0;
     border-radius: 12px;
@@ -107,6 +117,10 @@
 .select2-container--material .select2-selection--multiple .select2-selection__rendered {
     margin: 0;
     padding: 0 6px;
+}
+
+.select2-container--material .select2-selection--multiple .select2-selection__choice__display {
+    margin: 0 6px 0 4px;
 }
 
 .select2-container--material .select2-selection--multiple .select2-search__field {
@@ -127,6 +141,10 @@
 }
 
 .select2-container--material .select2-selection--multiple .select2-selection__choice__remove {
+    border: none;
+    background: none;
+    box-shadow: none;
+    outline: none;
     position: absolute;
     right: 4px;
     bottom: 0;
@@ -135,6 +153,7 @@
     float: right;
     transition: opacity;
     font-size: 1rem;
+    line-height: 1.4rem;
 }
 
 .select2-container--material .select2-selection--multiple .select2-selection__choice__remove:hover {
@@ -146,17 +165,12 @@
     margin: -8px 0;
 }
 
+
 .select2-container--material .select2-dropdown .select2-search__field {
     min-height: 32px;
     margin-bottom: 16px;
     border: 0;
-    border-bottom: 1px solid #ccc;
     transition: all .3s
-}
-
-.select2-container--material .select2-dropdown .select2-search__field:focus {
-    border-bottom: 1px solid #4285f4;
-    box-shadow: 0 1px 0 0 #4585f4;
 }
 
 .select2-container--material .select2-results__options {
@@ -167,8 +181,8 @@
 }
 
 .select2-container--material .select2-results > .select2-results__options {
-	max-height: 300px;
-	overflow-y: auto;
+    max-height: 300px;
+    overflow-y: auto;
 }
 
 .select2-container--material .select2-results__option {
@@ -196,12 +210,7 @@
     background-color: #ddd;
 }
 
-.select2-container--material.select2-container--focus .select2-selection {
-    border-bottom: 1px solid #4285f4;
-    box-shadow: 0 1px 0 0 #4585f4;
-}
-
-.select2-container--material.select2-container--disabled .select2-selection {
+.select2-container--material.select2-container--disabled {
     color: rgba(0, 0, 0, .3);
     cursor: not-allowed;
     -webkit-user-select: none;
@@ -211,7 +220,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, .3)
 }
 
-.select2-container--material.select2-container--disabled.select2-container--focus .select2-selection {
+.select2-container--material.select2-container--disabled.select2-container--focus {
     box-shadow: none;
 }
 
