--- a/src/assets/css/select2-krajee-bs4.css
+++ b/src/assets/css/select2-krajee-bs4.css
@@ -200,6 +200,7 @@
     border-radius: 0;
 }
 
+.select2-container--krajee-bs4 .select2-results__option.select2-results__option--selected,
 .select2-container--krajee-bs4 .select2-results__option[aria-selected=true] {
     color: #31708f;
     background-color: #d9edf7;
@@ -326,7 +327,6 @@
 
 .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__rendered {
     box-sizing: border-box;
-    display: block;
     line-height: 1.5;
     list-style: none;
     margin: 0;
