--- a/src/assets/css/select2-krajee-bs4.css
+++ b/src/assets/css/select2-krajee-bs4.css
@@ -1,6 +1,6 @@
 /*!
  * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014 - 2021
- * @version 2.2.2
+ * @version 2.2.3
  *
  * Krajee Bootstrap 4.x Theme for Select2
  *
@@ -115,41 +115,41 @@
     border: none;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow {
     width: 1.125rem;
 }
 
-.input-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b {
+:not(.form-floating) > .input-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b {
     border-width: 0.2rem 0.1rem 0 0.1rem;
     margin-left: -0.1875rem;
 }
 
-.input-sm.select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b,
-.input-group-sm .select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b {
     border-width: 0 0.1rem 0.2rem 0.1rem;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow {
     width: 1.4rem;
     right: 0.125rem;
 }
 
-.input-lg.select2-container--krajee-bs4[dir="rtl"] .select2-selection--single .select2-selection__arrow,
-.input-group-lg .select2-container--krajee-bs4[dir="rtl"] .select2-selection--single .select2-selection__arrow {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4[dir="rtl"] .select2-selection--single .select2-selection__arrow,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4[dir="rtl"] .select2-selection--single .select2-selection__arrow {
     left: 0.125rem;
     right: auto;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--single .select2-selection__arrow b {
     border-width: 0.375rem 0.3rem 0 0.3rem;
 }
 
-.input-lg.select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b,
-.input-group-lg .select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4.select2-container--open .select2-selection--single .select2-selection__arrow b {
     border-width: 0 0.3rem 0.375rem 0.3rem;
 }
 
@@ -355,6 +355,7 @@
     line-height: 1.5;
     margin-top: 0;
     min-width: 5em;
+    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
 }
 
 .select2-container--krajee-bs4[dir="rtl"] .select2-selection--single .select2-selection__rendered {
@@ -424,6 +425,7 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
 .input-group > .select2-container--krajee-bs4:focus {
     z-index: 3;
 }
+
 .input-group > .select2-container--krajee-bs4:not(:last-child),
 .input-group > .select2-container--krajee-bs4:not(:last-child) .select2-selection {
     border-top-right-radius: 0;
@@ -439,7 +441,7 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
 /**
  * Control Sizes
  */
-.input-sm.select2-container--krajee-bs4, .input-lg.select2-container--krajee-bs4 {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4, :not(.form-floating) > .input-lg.select2-container--krajee-bs4 {
     border-radius: 0;
     font-size: 0.875rem;
     height: auto;
@@ -447,8 +449,8 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     padding: 0;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--single,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--single {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--single,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--single {
     height: calc(1.8125rem + 2px);
     padding: .25rem .5rem;
     font-size: .875rem;
@@ -456,42 +458,40 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     border-radius: .2rem;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--multiple,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--multiple,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple {
     min-height: calc(1.875rem - 1px);
 }
 
-.input-group-sm.s2-input-group .input-group-text,
-.input-group-sm.s2-input-group .input-group-prepend .btn,
-.input-group-sm.s2-input-group .input-group-append .btn,
-.input-group-lg.s2-input-group .input-group-text,
-.input-group-lg.s2-input-group .input-group-prepend .btn,
-.input-group-lg.s2-input-group .input-group-append .btn {
+:not(.form-floating) > .input-group-sm.s2-input-group .input-group-prepend .btn,
+:not(.form-floating) > .input-group-sm.s2-input-group .input-group-append .btn,
+:not(.form-floating) > .input-group-lg.s2-input-group .input-group-prepend .btn,
+:not(.form-floating) > .input-group-lg.s2-input-group .input-group-append .btn {
     height: 100%;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice {
     font-size: 0.8rem;
     margin: 0.25rem 0 0 0.375rem;
     padding: 0.05rem 0.375rem 0.125rem;
 }
 
-.input-sm.select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
-.input-group-sm .select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
     margin: 0.25rem 0.375rem 0 0;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field {
     padding: 0.35rem;
     font-size: 0.875rem;
     height: calc(1.875rem - 1px);
     line-height: 1.5;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--single,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--single {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--single,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--single {
     height: calc(2.875rem + 2px);
     padding: .5rem 1rem;
     font-size: 1.25rem;
@@ -499,32 +499,31 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     border-radius: .3rem;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--multiple,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--multiple,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple {
     min-height: calc(2.875rem + 2px);
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__rendered,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__rendered {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__rendered,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__rendered {
     line-height: 1.5;
 }
 
-.input-lg.select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
-.input-group-lg .select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
     margin: 0.5625rem 0.5625rem 0 0;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice {
     line-height: 1.4;
     border-radius: 0.25rem;
     margin: 0.5625rem 0 0 0.5625rem;
     padding: 0.15rem 0.3rem;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field {
-    font-size: 1.25rem;
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-search--inline .select2-search__field {
     padding: 0.5625rem;
     font-size: 1.25rem;
 }
@@ -559,13 +558,13 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     right: auto;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection__clear,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection__clear {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection__clear,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection__clear {
     font-size: 1rem;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection__clear,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection__clear {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection__clear,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection__clear {
     font-size: 1.5rem;
 }
 
@@ -579,12 +578,12 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     right: auto;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__clear {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__clear {
     top: 0.3rem;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection__clear,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection__clear {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection__clear,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection__clear {
     top: 0.6rem;
 }
 
@@ -610,14 +609,14 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     opacity: 0.7;
 }
 
-.input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove,
-.input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
+:not(.form-floating) > .input-sm.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove,
+:not(.form-floating) > .input-group-sm .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
     font-size: 1.05rem;
     line-height: 0.9;
 }
 
-.input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove,
-.input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
+:not(.form-floating) > .input-lg.select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove,
+:not(.form-floating) > .input-group-lg .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
     font-size: 1.35rem;
     line-height: 0.925;
 }
@@ -638,10 +637,68 @@ select.is-valid + .select2-container--krajee-bs4 .select2-selection--single,
     text-align: right;
 }
 
+.select2-container--krajee-bs4 .select2-dropdown:not([dir="rtl"]) .s2-select-label > *:first-child {
+    margin-right: 0.25rem;
+}
+
+.select2-container--krajee-bs4 .select2-dropdown[dir="rtl"] .s2-select-label > *:first-child {
+    margin-left: 0.25rem;
+}
+
 .select2-container--krajee-bs4 .select2-dropdown[dir="rtl"] .select2-results__option {
     text-align: right;
 }
 
 .select2-container--krajee-bs4 > .select2-dropdown {
     z-index: 1056;
+}
+
+/**
+ * bootstrap 5 floating labels
+ */
+.form-floating > .select2-container--krajee-bs4 .select2-selection--single {
+    padding: 1.45rem .75rem .55rem;
+    height: calc(3.5rem + 2px);
+}
+
+.form-floating > .select2-container--krajee-bs4 .select2-selection--single .select2-selection__clear {
+    top: 1rem;
+}
+
+.form-floating > .select2-container--krajee-bs4 .select2-selection--multiple {
+    padding: 1rem .75rem 0;
+    height: auto;
+    min-height: calc(3.5rem + 2px);
+}
+
+.form-floating > .select2-container--krajee-bs4 .select2-selection--multiple .select2-search__field {
+    padding-left: 0;
+    margin-left: 0;
+    padding-right: 0;
+    margin-right: 0;
+}
+
+.form-floating > .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice {
+    padding: 0.05rem 0.05rem 0 0.25rem;
+    line-height: 1.3;
+    font-size: 0.8rem;
+}
+
+.form-floating > .select2-container--krajee-bs4:not([dir="rtl"]) .select2-selection--multiple .select2-selection__choice {
+    margin: 0.75rem 0.375rem -0.375rem 0;
+}
+
+.form-floating > .select2-container--krajee-bs4[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
+    margin: 0.75rem 0 -0.375rem 0.375rem;
+}
+
+.form-floating > .select2-container--krajee-bs4 .select2-selection--multiple .select2-selection__choice__remove {
+    font-size: 1rem;
+    line-height: 0.75rem;
+}
+
+.form-floating > .select2-container--krajee-bs4[dir="rtl"] ~ .form-label {
+    right: 0;
+    left: auto;
+    padding-right: 0.5rem;
 }
